# destigmatizer

./: .gitignore  LICENSE  README.md  __init__.py  example.ipynb  pyproject.toml  reframe_example_config.json  setup.py  test.py
src/: task1.py  task2.py  task3.py  task3_C.py
src/destigmatizer/: __init__.py  analyzers.py  classifiers.py  clients.py  config_manager.py  core.py  filters.py  pipeline.py  test_pipe.py  utils.py
src/destigmatizer/tests/: __init__.py  run_all_tests.py  test_drug_classifier.py  test_rewriter.py  test_stigma_classifier.py  test_text_analyzer.py  test_workflow.py  utils.py
src/reframe/: __init__.py  classifiers.py  core.py  example.py  reframe.py  rewriters.py  test.py  test_workflow.py  utils.py
src/reframe/classifiers/: drug_classifier.py  get_emotion.py  get_style.py  rewriter.py  stigma_classifier.py
src/reframe/tests/: __init__.py  run_all_tests.py  test_drug_classifier.py  test_emotion_detector.py  test_rewriter.py  test_stigma_classifier.py  test_text_analyzer.py  test_workflow.py  utils.py
src/reframe/utils/: OpenAIWrapper.py
