[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reframe"
version = "0.0.9"
dependencies = [
    "nltk",
    "lexicalrichness",
]
requires-python = ">=3.8"
authors = [
  { name="Layla Bouzoubaa", email="author@example.com" },
  { name="Muqi Guo", email="author@example.com" },
  { name="Joseph Trybala", email="author@example.com" },
]
maintainers = [
  {name = "Layla Bouzoubaa", email="author@example.com"}
]
description = "An llm-powered platform-agnostic utility for destigmatizing language pertaining to drugs and their use. This library is provided and was designed with multiple steps in mind to produce explainable results. These steps are meant to be used in sequence (to identify destigmatizing text and then destigmatize) however, they can be used independently to identify text pertaining to drugs, identify text with drug-related stigma, and find the style of the writing. Of important note, this library does not attempt to handle LLM client creation and expects it to be done prior to use."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = {text = "BSD-3-Clause"}

[project.scripts]
reframe-test = "reframe.tests.run_all_tests:main"


[project.urls]
Homepage = "https://github.com/labouz/reframe"
Issues = "https://github.com/labouz/reframe/issues"